--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,7 @@
 body{
-    
+    background-color: aquamarine;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bolder;
+    font-style: oblique;
 }
